# Ragstudio

./: .dockerignore  .env.example  .gitattributes  .gitignore  .review-fix-recovery-pending.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  REVIEW.md  SECURITY.md  TECHNICAL_AUDIT.md  TODOS.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/src/ragstudio/: __init__.py  app.py  config.py  logging.py  static.py
backend/src/ragstudio/api/: background.py  deps.py  upload_utils.py
backend/src/ragstudio/db/: engine.py  models.py  repositories.py
backend/src/ragstudio/domain_profiles/: builtin_profiles.json
backend/src/ragstudio/proof_packet/: __init__.py  cli.py  errors.py  manifest.py  models.py  redaction.py  validator.py
backend/src/ragstudio/schemas/: __init__.py  chunks.py  (+17 more)
backend/tests/: conftest.py  test_api_health.py  test_arabic_text.py  test_architecture_drift_guards.py  test_background_runner_factory.py  test_candidate_diversity.py  test_canonical_assembly.py  test_chunk_lexical_search_repository.py  test_chunk_persistence_service.py  test_chunk_quality_gate.py  test_chunk_schemas.py  test_chunk_service_arabic_search.py  test_chunk_splitter.py  test_chunks.py  test_config.py  test_context_assembly_service.py  test_context_window_service.py  test_db_engine.py  test_defaults_api.py  test_document_chunking_policy.py  test_document_contract.py  test_document_parse_evidence.py  test_document_parser_service.py  test_document_pipeline_timeline.py  test_documents.py  test_documents_jobs.py  test_domain_classifier.py  test_domain_layout_retrieval_flow.py  test_domain_metadata.py  test_domain_metadata_ai_suggester.py  test_domain_metadata_contract_compiler.py  test_domain_metadata_quality_gate.py  test_domain_metadata_service.py  test_domain_profile_registry.py  test_domain_query_expansion_service.py  test_domain_retrieval_adapters.py  test_durable_ingestion_stages.py  test_evaluation_importer.py  test_evidence_context.py  test_evidence_graph.py  (+89 more)
(+560 files in other folders)
