[project]
name = "raganything-studio"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.136.1",
  "uvicorn>=0.46.0",
  "pydantic>=2.13.4",
  "sqlalchemy>=2.0.49",
  "alembic>=1.18.4",
  "aiosqlite>=0.22.1",
  "asyncpg>=0.31.0",
  "python-multipart>=0.0.27",
  "httpx>=0.28.1",
  "pydantic-settings>=2.12.0",
  "pyyaml>=6.0.3",
  "torch>=2.11.0",
  "orjson>=3.11.9",
  "structlog>=25.5.0",
  "anyio>=4.13.0",
  "neo4j>=5.28.0",
  "pgvector>=0.4.1",
  "raganything[all]>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.12",
  "pyright>=1.1.409",
]

[project.scripts]
ragstudio = "ragstudio.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ragstudio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
